Tweaks styles, fixes button alignment

--- a/client/sass/core/_settings.scss
+++ b/client/sass/core/_settings.scss
@@ -55,6 +55,7 @@ $z-index-30: 30;
 // Colors
 // Add your own color variables
 $color-dark:#000;
+$color-active: #e7e7e7;
 
 // Color buttons
 
